560 ==> 400436 - Crash when saving jpeg files with metadata.
561 ==> 400492 - Rotation does not work.
562 ==> 246727 - Add undo functionality to move to trash action.
563 ==> 400637 - IPFS icons have non-square size, causing them to get blurred.
564 ==> 400434 - Trash content disappears after selecting 'Map' or 'Table' view.
565 ==> 394660 - Crashes when refreshing.
566 ==> 400712 - File modification timestamp is updated when images are moved to collection on removable media.
567 ==> 394214 - Import .mp4 files does not preserve file mtime as date stamp.
568 ==> 400762 - Trash - "Delete All Permanently" button not visible.
569 ==> 400792 - Failure to export to JPEG 2000.
570 ==> 400777 - Group images by timelapse / burst [patch].
571 ==> 400902 - NAS Mysql cannot connect with instructions given by Dmitry Popov.
572 ==> 400918 - Tags are erroneously copied to untagged images in a selection when new tag added.
573 ==> 375197 - It is possible to rotate video thumbnails (but the video isn't rotated).
574 ==> 334678 - Thumbnails fail to generate for certain AVI files - infinite loop.
575 ==> 400917 - Rotation of picture in Preview mode: thumbnail not rotated.
576 ==> 400960 - Do not reset horizontal scroll bar slider position when selecting album.
577 ==> 400766 - Export to Onedrive: not possible to export into subfolder.
578 ==> 398207 - box.com video upload fails despite successful authentication.
579 ==> 401160 - Build against lensfun-devel.
580 ==> 401173 - Wish for file saving: set changed datetime to exif datetime.
581 ==> 401423 - Video sidecar files nor read or written.
582 ==> 401438 - Calendar plugin prints improper month names (Czech localization).
583 ==> 401515 - Export to OneDrive: created subfolders not correctly managed.
584 ==> 401516 - Export to (Onedrive, Dropbox ...): list of subfolders not correctly displayed (problems if several subfolders have the same name).
585 ==> 401645 - Digikam crashes on possibly damaged video-file.
586 ==> 