@@ -50,6 +50,7 @@ private Q_SLOTS:
 
     void slotAssignSettings2Widget();
     void slotSettingsChanged();
+    void slotPercentChanged();
 
 private:
 
